--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,12 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-title: "Help Center"
-email: gusquinalha@gmail.com
-description: "Simple and flexible Jekyll theme for help center."
-baseurl: "/jekyll-help-center-theme"
-url: "http://quinalha.me"
-twitter_username: "gustavoquinalha"
-github_username:  "gustavoquinalha"
-color_theme:  "#0081ff"
+title: "Slothy Help"
+email: tristan@slothhost.com
+description: "The official help center for slothhost.com"
+baseurl: "/slothy-help/"
+url: "http://help.slothhost.com"
+twitter_username: "SlothHost"
+github_username:  "SlothHost"
+color_theme:  "#2d374d"
 color_text:  "#fff"
 language:  "en"
 
